trunk/Archive2/cf/4d68c11751e98d/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:20:5: error: expected '}' before 'std'
     std::string str = {"hello"} + {"world"};    
     ^
main.cpp:20:5: error: expected ',' or ';' before 'std'
main.cpp:20:35: error: expected primary-expression before '{' token
     std::string str = {"hello"} + {"world"};    
                                   ^
main.cpp:20:35: error: expected ';' before '{' token
main.cpp: At global scope:
main.cpp:21:6: warning: extra ';' [-Wpedantic]
     };
      ^
main.cpp:22:5: error: 'cout' in namespace 'std' does not name a type
     std::cout << words << std::endl;
     ^
main.cpp:23:1: error: expected declaration before '}' token
 }
 ^
